Function descriptions and function factory ..

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -5,7 +5,43 @@
 ##
 # Any configuration will happen here.
 
+#
+# A list of all known functions.
+#
 
+##
+# Date/Time functions
+org.jfree.formula.functions.datetime.Date.class=org.jfree.formula.function.datetime.DateFunction
+org.jfree.formula.functions.datetime.Date.description=org.jfree.formula.function.datetime.DateFunctionDescription
+
+##
+# Logical functions
+org.jfree.formula.functions.logical.And.class=org.jfree.formula.function.logical.AndFunction
+org.jfree.formula.functions.logical.And.description=org.jfree.formula.function.logical.AndFunctionDescription
+org.jfree.formula.functions.logical.False.class=org.jfree.formula.function.logical.FalseFunction
+org.jfree.formula.functions.logical.False.description=org.jfree.formula.function.logical.FalseFunctionDescription
+org.jfree.formula.functions.logical.If.class=org.jfree.formula.function.logical.IfFunction
+org.jfree.formula.functions.logical.If.description=org.jfree.formula.function.logical.IfFunctionDescription
+org.jfree.formula.functions.logical.Not.class=org.jfree.formula.function.logical.NotFunction
+org.jfree.formula.functions.logical.Not.description=org.jfree.formula.function.logical.NotFunctionDescription
+org.jfree.formula.functions.logical.Or.class=org.jfree.formula.function.logical.OrFunction
+org.jfree.formula.functions.logical.Or.description=org.jfree.formula.function.logical.OrFunctionDescription
+org.jfree.formula.functions.logical.True.class=org.jfree.formula.function.logical.TrueFunction
+org.jfree.formula.functions.logical.True.description=org.jfree.formula.function.logical.TrueFunctionDescription
+org.jfree.formula.functions.logical.Xor.class=org.jfree.formula.function.logical.XorFunction
+org.jfree.formula.functions.logical.Xor.description=org.jfree.formula.function.logical.XorFunctionDescription
+
+##
+# Mathematical functions
+org.jfree.formula.functions.math.Sum.class=org.jfree.formula.function.math.SumFunction
+org.jfree.formula.functions.math.Sum.description=org.jfree.formula.function.math.SumFunctionDescription
+
+
+#
+# Known Operators. Operators are not hardcoded, so it is rather easy to replace
+# the operator implementations if needed. Adding operators is not possible
+# without touching the parser; but this should be a rare requirement as the
+# functions model is very powerfull.
 org.jfree.formula.operators.infix.Add.token=+
 org.jfree.formula.operators.infix.Add.class=org.jfree.formula.operators.AddOperator
 org.jfree.formula.operators.infix.Subtract.token=-
@@ -36,3 +72,4 @@ org.jfree.formula.operators.prefix.Plus.token=+
 org.jfree.formula.operators.prefix.Plus.class=org.jfree.formula.operators.PlusSignOperator
 org.jfree.formula.operators.prefix.Minus.token=-
 org.jfree.formula.operators.prefix.Minus.class=org.jfree.formula.operators.MinusSignOperator
+
