--- a/flute/ant/build.properties
+++ b/flute/ant/build.properties
@@ -38,6 +38,15 @@ manifest-lib-prefix=lib/
 # Used by: core libraries
 sac-jar-file=sac.jar
 
+#  Used tools:
+#
+#  JavaCC is opensource and can be downloaded freely from:
+#  https://javacc.dev.java.net/
+#
+#  You have to override or change this property to your JavaCC installation
+#  in case you want to regnerate the parser from the grammar file.
+javacchome=/home/src/ext/javacc
+
 ##############################################################
 #
 # Generated files ...
