--- a/liblayout/ant/build.properties
+++ b/liblayout/ant/build.properties
@@ -2,7 +2,7 @@
 #
 #  Global settings ...
 liblayout.name=liblayout
-liblayout.version=0.1.2
+liblayout.version=0.1.3
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -38,11 +38,11 @@ manifest-lib-prefix=lib/
 # Used by: core libraries
 
 # Used by: module-misc-beanshell
-jcommon-jar-file=jcommon-1.0.5.jar
-libfonts-jar-file=libfonts-0.2.0.jar
-flute-jar-file=flute-1.3-jfree-20060720.jar
+jcommon-jar-file=jcommon-1.0.6-cvs.jar
+libfonts-jar-file=libfonts-0.2.1.jar
+flute-jar-file=flute-1.3-jfree-20061107.jar
 sac-jar-file=sac.jar
-libloader-jar-file=libloader-0.1.3.jar
+libloader-jar-file=libloader-0.1.6.jar
 junit-jar-file=junit.jar
 
 ##############################################################
