--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -5,7 +5,7 @@
 #
 #  Global settings ...
 jfreereport.name=jfreereport
-jfreereport.version=0.9.0-pre2
+jfreereport.version=0.9.0-pre4
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -38,13 +38,14 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-1.0.5.jar
+jcommon-jar-file=jcommon-1.0.6-cvs.jar
 jcommon-serializer-jar-file=jcommon-serializer-0.1.0.jar
-libfonts-jar-file=liblayout-0.1.2.jar
-liblayout-jar-file=libfonts-0.2.0.jar
-libloader-jar-file=libloader-0.1.3.jar
-pixie-jar-file=pixie-0.8.5.jar
-libxml-jar-file=libxml-
+libfonts-jar-file=liblayout-0.1.3.jar
+liblayout-jar-file=libfonts-0.2.1.jar
+libloader-jar-file=libloader-0.1.6.jar
+pixie-jar-file=pixie-0.8.6.jar
+libxml-jar-file=libxml-0.1.2.jar
+libformula-jar-file=libformula-0.1.0.jar
 
 # Used by: module-misc-beanshell
 beanshell-jar-file=bsh-1.3.0.jar
