--- a/libxml/ant/build.properties
+++ b/libxml/ant/build.properties
@@ -2,7 +2,7 @@
 #
 #  Global settings ...
 libxml.name=libxml
-libxml.version=0.1.1
+libxml.version=0.1.2
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -38,8 +38,8 @@ manifest-lib-prefix=lib/
 # Used by: core libraries
 
 # Used by: module-misc-beanshell
-jcommon-jar-file=jcommon-1.0.5.jar
-libloader-jar-file=libloader-0.1.3.jar
+jcommon-jar-file=jcommon-1.0.6-cvs.jar
+libloader-jar-file=libloader-0.1.6.jar
 
 ##############################################################
 #
