Font support (encodings)

--- a/libfonts/ant/build.properties
+++ b/libfonts/ant/build.properties
@@ -38,8 +38,8 @@ manifest-lib-prefix=lib/
 # Used by: core libraries
 
 # Used by: module-misc-beanshell
-jcommon-jar-file=jcommon-1.0.6.jar
-libloader-jar-file=libloader-0.1.5.jar
+jcommon-jar-file=jcommon-1.0.6-cvs.jar
+libloader-jar-file=libloader-0.1.6.jar
 
 ##############################################################
 #
