Layout controllers have been modularized ..

--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -93,6 +93,14 @@ org.jfree.report.WarnInvalidColumns=true
 org.jfree.report.NoPrinterAvailable=false
 
 ##
+# Layout controller implementations
+org.jfree.report.flow.structure.org.jfree.report.JFreeReport=org.jfree.report.flow.layoutprocessor.ReportLayoutController
+org.jfree.report.flow.structure.org.jfree.report.structure.SubReport=org.jfree.report.flow.layoutprocessor.SubReportLayoutController
+org.jfree.report.flow.structure.org.jfree.report.structure.Section=org.jfree.report.flow.layoutprocessor.SectionLayoutController
+org.jfree.report.flow.structure.org.jfree.report.structure.ContentElement=org.jfree.report.flow.layoutprocessor.ContentElementLayoutController
+org.jfree.report.flow.structure.org.jfree.report.structure.StaticText=org.jfree.report.flow.layoutprocessor.StaticTextLayoutController
+
+##
 # Known namespaces.
 org.jfree.report.namespaces.engine.Uri=http://jfreereport.sourceforge.net/namespaces/engine/flow
 org.jfree.report.namespaces.engine.Default-Style=res://org/jfree/report/engine.css
