--- a/jfreereport/ant/build.xml
+++ b/jfreereport/ant/build.xml
@@ -53,6 +53,7 @@
         <pathelement location="${libdir}/${beanshell-jar-file}"/>
         <pathelement location="${libdir}/${bsf-jar-file}"/>
         <pathelement location="${libdir}/${jaxp-jar-file}"/>
+        <pathelement location="${libdir}/${librepository-jar-file}"/>
       </all-classpath>
       <all-resources>
         <include name="*.properties"/>
@@ -86,6 +87,7 @@
         <pathelement location="${libdir}/${beanshell-jar-file}"/>
         <pathelement location="${libdir}/${bsf-jar-file}"/>
         <pathelement location="${libdir}/${jaxp-jar-file}"/>
+        <pathelement location="${libdir}/${librepository-jar-file}"/>
       </classpath>
       <packageset dir="source" defaultexcludes="yes">
         <include name="org/jfree/report"/>
