more changes for the HTML output ..

--- a/liblayout/source/org/jfree/layouting/modules/output/html/configuration.properties
+++ b/liblayout/source/org/jfree/layouting/modules/output/html/configuration.properties
@@ -9,6 +9,8 @@ org.jfree.layouting.modules.output.html.default.html=deny
 
 #
 # Next define the tags for which we want to customize the indent-behaviour
+org.jfree.layouting.modules.output.html.tag.html.html=allow
+org.jfree.layouting.modules.output.html.tag.html.head=allow
 org.jfree.layouting.modules.output.html.tag.html.p=deny
 org.jfree.layouting.modules.output.html.tag.html.span=deny
 org.jfree.layouting.modules.output.html.tag.html.div=allow
