--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -37,6 +37,12 @@ org.jfree.formula.functions.math.Sum.class=org.jfree.formula.function.math.SumFu
 org.jfree.formula.functions.math.Sum.description=org.jfree.formula.function.math.SumFunctionDescription
 
 
+##
+# Mathematical functions
+org.jfree.formula.functions.information.HasChanged.class=org.jfree.formula.function.information.HasChangedFunction
+org.jfree.formula.functions.information.HasChanged.description=org.jfree.formula.function.information.HasChangedFunctionDescription
+
+
 #
 # Known Operators. Operators are not hardcoded, so it is rather easy to replace
 # the operator implementations if needed. Adding operators is not possible
