--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -101,18 +101,18 @@ org.jfree.report.flow.structure.org.jfree.report.structure.ContentElement=org.jf
 org.jfree.report.flow.structure.org.jfree.report.structure.StaticText=org.jfree.report.flow.layoutprocessor.StaticTextLayoutController
 
 ##
-# Known namespaces.
-org.jfree.report.namespaces.engine.Uri=http://jfreereport.sourceforge.net/namespaces/engine/flow
-org.jfree.report.namespaces.engine.Default-Style=res://org/jfree/report/engine.css
-org.jfree.report.namespaces.engine.ClassAttr=class
-org.jfree.report.namespaces.engine.StyleAttr=style
-org.jfree.report.namespaces.engine.Prefix=report-engine
-
-org.jfree.report.namespaces.compatibility.Uri=http://jfreereport.sourceforge.net/namespaces/engine/compatiblity
-org.jfree.report.namespaces.compatibility.Default-Style=res://org/jfree/report/compat.css
-org.jfree.report.namespaces.compatibility.ClassAttr=class
-org.jfree.report.namespaces.compatibility.StyleAttr=style
-org.jfree.report.namespaces.compatibility.Prefix=report-compat
+# Known namespaces that should be included by default. (We have to match them later)
+#org.jfree.report.namespaces.engine.Uri=http://jfreereport.sourceforge.net/namespaces/engine/flow
+#org.jfree.report.namespaces.engine.Default-Style=res://org/jfree/report/engine.css
+#org.jfree.report.namespaces.engine.ClassAttr=class
+#org.jfree.report.namespaces.engine.StyleAttr=style
+#org.jfree.report.namespaces.engine.Prefix=report-engine
+#
+#org.jfree.report.namespaces.compatibility.Uri=http://jfreereport.sourceforge.net/namespaces/engine/compatiblity
+#org.jfree.report.namespaces.compatibility.Default-Style=res://org/jfree/report/compat.css
+#org.jfree.report.namespaces.compatibility.ClassAttr=class
+#org.jfree.report.namespaces.compatibility.StyleAttr=style
+#org.jfree.report.namespaces.compatibility.Prefix=report-compat
 
 
 ###############
