--- a/libloader/ant/build.properties
+++ b/libloader/ant/build.properties
@@ -2,7 +2,7 @@
 #
 #  Global settings ...
 libloader.name=libloader
-libloader.version=0.1.6
+libloader.version=0.2.0
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -36,7 +36,7 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-1.0.6-cvs.jar
+jcommon-jar-file=jcommon-1.0.7.jar
 
 
 # Used by: module-cache-oscache, module-cache-ehcache
