updated copyright and readme files and version numbers

--- a/libxml/source/org/jfree/xmlns/writer/sample.properties
+++ b/libxml/source/org/jfree/xmlns/writer/sample.properties
@@ -1,4 +1,8 @@
 #
+# Copyright (c) 2006, Pentaho Corporation. All Rights Reserved.
+#
+
+#
 # A sample file demonstrating the format of the tag-description
 # database
 namespace.html=schema://namespace.url/
