--- a/librepository/ant/build.properties
+++ b/librepository/ant/build.properties
@@ -40,7 +40,7 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-1.0.6-cvs.jar
+jcommon-jar-file=jcommon-1.0.7.jar
 
 
 ##############################################################
