--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -5,7 +5,7 @@
 #
 #  Global settings ...
 jfreereport.name=jfreereport
-jfreereport.version=0.9.0-pre4
+jfreereport.version=0.9.0
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -38,17 +38,28 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-1.0.6-cvs.jar
+jcommon-jar-file=jcommon-1.0.7.jar
 jcommon-serializer-jar-file=jcommon-serializer-0.1.0.jar
-libfonts-jar-file=liblayout-0.1.3.jar
-liblayout-jar-file=libfonts-0.2.1.jar
-libloader-jar-file=libloader-0.1.6.jar
-libxml-jar-file=libxml-0.1.2.jar
+libfonts-jar-file=liblayout-0.2.0.jar
+liblayout-jar-file=libfonts-0.2.2.jar
+libloader-jar-file=libloader-0.2.0.jar
+libxml-jar-file=libxml-0.2.0.jar
 libformula-jar-file=libformula-0.1.0.jar
 librepository-jar-file=librepository-0.1.0.jar
+flute-jar-file=flute-1.3-jfree-20061107.jar
+
+#
+# Optional libraries
+pixie-jar-file=optional/pixie-0.8.6.jar
+commons-logging-jar-file=optional/commons-logging-1.0.4.jar
+oscache-jar-file=optional/oscache-2.3-compat.jar
 
 # Used by: module-parser
 jaxp-jar-file=gnujaxp.jar
+sac-jar-file=sac.jar
+
+# Used by: output-pdf
+itext-jar-file=itext-1.4.jar
 
 ##############################################################
 #
