--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -86,7 +86,7 @@ org.jfree.report.WarnInvalidColumns=true
 
 #
 # Defines, whether JFreeReport should query the default page format from the printerdriver.
-# If there is no printer installed on Windows, this seems to block the JavaVM until a 
+# If there is no printer installed on Windows, this seems to block the JavaVM until a
 # time out is reached.
 #
 # If this property is set to "true" a hard coded default is used instead.
@@ -102,17 +102,17 @@ org.jfree.report.flow.structure.org.jfree.report.structure.StaticText=org.jfree.
 
 ##
 # Known namespaces that should be included by default. (We have to match them later)
-#org.jfree.report.namespaces.engine.Uri=http://jfreereport.sourceforge.net/namespaces/engine/flow
-#org.jfree.report.namespaces.engine.Default-Style=res://org/jfree/report/engine.css
-#org.jfree.report.namespaces.engine.ClassAttr=class
-#org.jfree.report.namespaces.engine.StyleAttr=style
-#org.jfree.report.namespaces.engine.Prefix=report-engine
-#
-#org.jfree.report.namespaces.compatibility.Uri=http://jfreereport.sourceforge.net/namespaces/engine/compatiblity
-#org.jfree.report.namespaces.compatibility.Default-Style=res://org/jfree/report/compat.css
-#org.jfree.report.namespaces.compatibility.ClassAttr=class
-#org.jfree.report.namespaces.compatibility.StyleAttr=style
-#org.jfree.report.namespaces.compatibility.Prefix=report-compat
+org.jfree.report.namespaces.engine.Uri=http://jfreereport.sourceforge.net/namespaces/engine
+org.jfree.report.namespaces.engine.Default-Style=res://org/jfree/report/engine.css
+org.jfree.report.namespaces.engine.ClassAttr=class
+org.jfree.report.namespaces.engine.StyleAttr=style
+org.jfree.report.namespaces.engine.Prefix=report-engine
+
+org.jfree.report.namespaces.compatibility.Uri=http://jfreereport.sourceforge.net/namespaces/engine/compatiblity
+org.jfree.report.namespaces.compatibility.Default-Style=res://org/jfree/report/compat.css
+org.jfree.report.namespaces.compatibility.ClassAttr=class
+org.jfree.report.namespaces.compatibility.StyleAttr=style
+org.jfree.report.namespaces.compatibility.Prefix=report-compat
 
 
 ###############
@@ -141,3 +141,5 @@ org.jfree.report.modules.gui.common.Module=org.jfree.report.modules.gui.common.G
 org.jfree.report.modules.gui.swing.common.Module=org.jfree.report.modules.gui.swing.common.SwingCommonModule
 org.jfree.report.modules.gui.swing.preview.Module=org.jfree.report.modules.gui.swing.preview.SwingPreviewModule
 org.jfree.report.modules.gui.swing.printing.Module=org.jfree.report.modules.gui.swing.printing.SwingPrintingModule
+org.jfree.report.modules.gui.swing.html.Module=org.jfree.report.modules.gui.swing.html.SwingHtmlModule
+org.jfree.report.modules.gui.swing.pdf.Module=org.jfree.report.modules.gui.swing.pdf.SwingPdfModule
