--- a/jfreereport/source/org/jfree/report/modules/gui/swing/preview/resources.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/swing/preview/resources.properties
@@ -1,3 +1,23 @@
+category.report.name=Report
+category.report.mnemonic=
+category.report.description=
+
+category.go-to.name=Go To
+category.go-to.mnemonic=
+category.go-to.description=
+
+category.view.name=View
+category.view.mnemonic=
+category.view.description=
+
+category.help.name=Help
+category.help.mnemonic=
+category.help.description=
+
+category.export.name=Export
+category.export.mnemonic=
+category.export.description=
+
 
 action.back.description=Switch to the previous page
 action.back.mnemonic=VK_PAGE_UP
