--- a/jfreereport/source/org/jfree/report/modules/gui/themes/default/theme.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/themes/default/theme.properties
@@ -28,6 +28,9 @@ action.zoomIn.small-icon=org/jfree/report/modules/gui/themes/default/ZoomIn16.gi
 action.zoomOut.icon=org/jfree/report/modules/gui/themes/default/ZoomOut24.gif
 action.zoomOut.small-icon=org/jfree/report/modules/gui/themes/default/ZoomOut16.gif
 
+action.zoomCustom.icon=org/jfree/report/modules/gui/themes/default/EmptyIcon.gif
+action.zoomCustom.small-icon=org/jfree/report/modules/gui/themes/default/EmptyIcon.gif
+
 statusbar.warningIcon=org/jfree/report/modules/gui/themes/default/YellowCircle.gif
 statusbar.errorIcon=org/jfree/report/modules/gui/themes/default/RedCircle.gif
 statusbar.informationIcon=org/jfree/report/modules/gui/themes/default/BlueCircle.gif
