--- a/libloader/source/org/jfree/resourceloader/loader.properties
+++ b/libloader/source/org/jfree/resourceloader/loader.properties
@@ -4,6 +4,7 @@
 # way.
 org.jfree.resourceloader.loader.file=org.jfree.resourceloader.loader.file.FileResourceLoader
 org.jfree.resourceloader.loader.ftp=org.jfree.resourceloader.loader.ftp.FtpResourceLoader
+org.jfree.resourceloader.loader.jar=org.jfree.resourceloader.loader.jar.JarResourceLoader
 org.jfree.resourceloader.loader.http=org.jfree.resourceloader.loader.http.HttpResourceLoader
 org.jfree.resourceloader.loader.https=org.jfree.resourceloader.loader.http.HttpsResourceLoader
 org.jfree.resourceloader.loader.raw=org.jfree.resourceloader.loader.raw.RawResourceLoader
