Fixes in the state management. The display-model-builder is still invalid and causes troubles on some pagebreaks ..

--- a/liblayout/ant/build.properties
+++ b/liblayout/ant/build.properties
@@ -35,14 +35,18 @@ manifest-lib-prefix=lib/
 #
 #  Used libraries ...
 
-# Used by: core libraries
-jcommon-jar-file=jcommon-1.0.6-cvs.jar
+# JFree.org/JFreeReport libraries
+jcommon-jar-file=jcommon-1.0.7.jar
 flute-jar-file=flute-1.3-jfree-20061107.jar
-sac-jar-file=sac.jar
-libloader-jar-file=libloader-0.1.6.jar
+libloader-jar-file=libloader-0.2.0.jar
 librepository-jar-file=librepository-0.1.0.jar
-libfonts-jar-file=libfonts-0.2.1.jar
+libfonts-jar-file=libfonts-0.2.2.jar
+libxml-jar-file=libxml-0.2.0.jar
+
+# 3rd party libraries ..
 junit-jar-file=junit.jar
+sac-jar-file=sac.jar
+itext-jar-file=itext-1.4.jar
 
 ##############################################################
 #
