Defensive programming: Assertations for the state management

--- a/liblayout/source/org/jfree/layouting/layout.properties
+++ b/liblayout/source/org/jfree/layouting/layout.properties
@@ -2,6 +2,8 @@
 #
 # Global configuration file for the layout library
 
+org.jfree.layouting.EnableAssertations=true
+
 #
 # Enable aliasing for Graphics2D. This may result is textlayout errors
 # on some implementations. If your text is not correctly aligned, try
@@ -20,7 +22,7 @@ org.jfree.layouting.URLEncoding=iso-8859-1
 org.jfree.layouting.fontrenderer.IsBuggyFRC=false
 
 #
-# We need a CSS-SAC parser implementation. Use the flute-parser by default. 
+# We need a CSS-SAC parser implementation. Use the flute-parser by default.
 org.jfree.layouting.css.Parser=org.w3c.flute.parser.Parser
 
 ##
