*** empty log message ***

--- a/libloader/source/org/jfree/resourceloader/loader.properties
+++ b/libloader/source/org/jfree/resourceloader/loader.properties
@@ -2,6 +2,7 @@
 # The list of known storage handlers. These classes are responsible to get
 # the binary data into the system. They do not interpret that data in any
 # way.
+org.jfree.resourceloader.loader.file-url=org.jfree.resourceloader.loader.file.FileUrlResourceLoader
 org.jfree.resourceloader.loader.file=org.jfree.resourceloader.loader.file.FileResourceLoader
 org.jfree.resourceloader.loader.ftp=org.jfree.resourceloader.loader.ftp.FtpResourceLoader
 org.jfree.resourceloader.loader.jar=org.jfree.resourceloader.loader.jar.JarResourceLoader
