Restructuring: Removed dependencies on Structure-package; BugFixes

--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -132,10 +132,9 @@ org.jfree.report.modules.factories.report.flow.Module=org.jfree.report.modules.f
 org.jfree.report.modules.preferences.base.Module=org.jfree.report.modules.preferences.base.ConfigStoreBaseModule
 org.jfree.report.modules.preferences.filesystem.Module=org.jfree.report.modules.preferences.filesystem.FileConfigStoreModule
 
-org.jfree.report.modules.misc.bsf.Module=org.jfree.report.modules.misc.bsf.BSFModule
-org.jfree.report.modules.misc.beanshell.Module=org.jfree.report.modules.misc.beanshell.BeanShellModule
 org.jfree.report.modules.misc.tablemodel.Module=org.jfree.report.modules.misc.tablemodel.TableModelModule
 org.jfree.report.modules.misc.survey.Module=org.jfree.report.modules.misc.survey.SurveyModule
+org.jfree.report.modules.misc.autotable.Module=org.jfree.report.modules.misc.autotable.AutoTableModule
 
 org.jfree.report.modules.gui.common.Module=org.jfree.report.modules.gui.common.GuiCommonModule
 org.jfree.report.modules.gui.swing.common.Module=org.jfree.report.modules.gui.swing.common.SwingCommonModule
