--- a/jfreereport-demo/ant/build.properties
+++ b/jfreereport-demo/ant/build.properties
@@ -9,7 +9,7 @@
 #
 #  Global settings ...
 jfreereport.name=jfreereport-demo
-jfreereport.version=0.9.0
+jfreereport.version=0.9.0-01
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -42,16 +42,16 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-1.0.7.jar
+jcommon-jar-file=jcommon-1.0.8.jar
 jcommon-serializer-jar-file=jcommon-serializer-0.1.0.jar
-libfonts-jar-file=liblayout-0.2.0.jar
+libfonts-jar-file=liblayout-0.2.1.jar
 liblayout-jar-file=libfonts-0.2.2.jar
-libloader-jar-file=libloader-0.2.0.jar
+libloader-jar-file=libloader-0.2.1.jar
 libxml-jar-file=libxml-0.2.0.jar
-libformula-jar-file=libformula-0.1.0.jar
+libformula-jar-file=libformula-0.1.1.jar
 librepository-jar-file=librepository-0.1.0.jar
 flute-jar-file=flute-1.3-jfree-20061107.jar
-jfreereport-jar-file=jfreereport-0.9.0.jar
+jfreereport-jar-file=jfreereport-0.9.0-01.jar
 
 #
 # Optional libraries
