--- a/jfreereport/source/org/jfree/report/modules/factories/data/sql/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/factories/data/sql/configuration.properties
@@ -6,3 +6,10 @@
 # Do not modify the following lines. They connect this module to the central
 # parser registry.
 org.jfree.resourceloader.factory.modules.org.jfree.report.ReportDataFactory.sql=org.jfree.report.modules.factories.data.sql.SQLResourceXmlFactoryModule
+
+#
+# All known prefixes from where to load the xml-parser-configuration.
+org.jfree.report.modules.factories.data.sql.connection-factory-prefix.built-in.driver=org.jfree.report.modules.factories.data.sql.connection-factories.
+
+org.jfree.report.modules.factories.data.sql.connection-factories.namespace.sql=http://jfreereport.sourceforge.net/namespaces/datasources/sql
+org.jfree.report.modules.factories.data.sql.connection-factories.tag.sql.connection=org.jfree.report.modules.factories.data.sql.DriverConnectionReadHandler
