--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -42,7 +42,8 @@ org.jfree.formula.functions.math.Sum.description=org.jfree.formula.function.math
 org.jfree.formula.functions.information.HasChanged.class=org.jfree.formula.function.information.HasChangedFunction
 org.jfree.formula.functions.information.HasChanged.description=org.jfree.formula.function.information.HasChangedFunctionDescription
 
-org.jfree.formula.functions.information.HasChanged.class=org.jfree.formula.function.userdefined.NullFunction
+org.jfree.formula.functions.userdefined.Null.class=org.jfree.formula.function.userdefined.NullFunction
+org.jfree.formula.functions.userdefined.Null.description=org.jfree.formula.function.userdefined.NullFunctionDescription
 
 #
 # Known Operators. Operators are not hardcoded, so it is rather easy to replace
