--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -41,6 +41,9 @@ org.jfree.formula.functions.math.Sum.description=org.jfree.formula.function.math
 # Mathematical functions
 org.jfree.formula.functions.information.HasChanged.class=org.jfree.formula.function.information.HasChangedFunction
 org.jfree.formula.functions.information.HasChanged.description=org.jfree.formula.function.information.HasChangedFunctionDescription
+org.jfree.formula.functions.information.IsBlank.class=org.jfree.formula.function.information.IsBlankFunction
+org.jfree.formula.functions.information.IsBlank.description=org.jfree.formula.function.information.IsBlankFunctionDescription
+
 
 org.jfree.formula.functions.userdefined.Null.class=org.jfree.formula.function.userdefined.NullFunction
 org.jfree.formula.functions.userdefined.Null.description=org.jfree.formula.function.userdefined.NullFunctionDescription
