Counters fixed: This time the fix fits the specifications.

--- a/liblayout/source/org/jfree/layouting/layout.properties
+++ b/liblayout/source/org/jfree/layouting/layout.properties
@@ -109,6 +109,7 @@ org.jfree.layouting.numbering.octal=org.jfree.layouting.layouter.counters.numeri
 org.jfree.layouting.numbering.upper-hexadecimal=org.jfree.layouting.layouter.counters.numeric.UppercaseHexadecimalCounterStyle
 
 org.jfree.layouting.numbering.asterisks=org.jfree.layouting.layouter.counters.other.AsterisksCounterStyle
+org.jfree.layouting.numbering.none=org.jfree.layouting.layouter.counters.other.NoneCounterStyle
 
 
 #
