Add of logging properties

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -6,6 +6,14 @@
 # Any configuration will happen here.
 
 #
+# The minimum loglevel that is logged
+org.jfree.base.LogLevel=Debug
+
+#
+# Where to log. Give a classname of a  valid LogTarget implementation.
+org.jfree.base.LogTarget=org.jfree.util.PrintStreamLogTarget
+
+#
 # A list of all known functions.
 #
 
