Add of some functions

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -44,14 +44,39 @@ org.jfree.formula.functions.logical.Xor.description=org.jfree.formula.function.l
 org.jfree.formula.functions.math.Sum.class=org.jfree.formula.function.math.SumFunction
 org.jfree.formula.functions.math.Sum.description=org.jfree.formula.function.math.SumFunctionDescription
 
+##
+# Text functions
+org.jfree.formula.functions.text.Len.class=org.jfree.formula.function.text.LenFunction
+org.jfree.formula.functions.text.Len.description=org.jfree.formula.function.text.LenFunctionDescription
+org.jfree.formula.functions.text.Lower.class=org.jfree.formula.function.text.LowerFunction
+org.jfree.formula.functions.text.Lower.description=org.jfree.formula.function.text.LowerFunctionDescription
+org.jfree.formula.functions.text.Upper.class=org.jfree.formula.function.text.UpperFunction
+org.jfree.formula.functions.text.Upper.description=org.jfree.formula.function.text.UpperFunctionDescription
+org.jfree.formula.functions.text.Trim.class=org.jfree.formula.function.text.TrimFunction
+org.jfree.formula.functions.text.Trim.description=org.jfree.formula.function.text.TrimFunctionDescription
+org.jfree.formula.functions.text.Text.class=org.jfree.formula.function.text.TextFunction
+org.jfree.formula.functions.text.Text.description=org.jfree.formula.function.text.TextFunctionDescription
+org.jfree.formula.functions.text.T.class=org.jfree.formula.function.text.TFunction
+org.jfree.formula.functions.text.T.description=org.jfree.formula.function.text.TFunctionDescription
+org.jfree.formula.functions.text.Find.class=org.jfree.formula.function.text.FindFunction
+org.jfree.formula.functions.text.Find.description=org.jfree.formula.function.text.FindFunctionDescription
+org.jfree.formula.functions.text.Exact.class=org.jfree.formula.function.text.ExactFunction
+org.jfree.formula.functions.text.Exact.description=org.jfree.formula.function.text.ExactFunctionDescription
 
 ##
-# Mathematical functions
+# Information functions
 org.jfree.formula.functions.information.HasChanged.class=org.jfree.formula.function.information.HasChangedFunction
 org.jfree.formula.functions.information.HasChanged.description=org.jfree.formula.function.information.HasChangedFunctionDescription
 org.jfree.formula.functions.information.IsBlank.class=org.jfree.formula.function.information.IsBlankFunction
 org.jfree.formula.functions.information.IsBlank.description=org.jfree.formula.function.information.IsBlankFunctionDescription
-
+org.jfree.formula.functions.information.Na.class=org.jfree.formula.function.information.NaFunction
+org.jfree.formula.functions.information.Na.description=org.jfree.formula.function.information.NaFunctionDescription
+org.jfree.formula.functions.information.IsNa.class=org.jfree.formula.function.information.IsNaFunction
+org.jfree.formula.functions.information.IsNa.description=org.jfree.formula.function.information.IsNaFunctionDescription
+org.jfree.formula.functions.information.IsLogical.class=org.jfree.formula.function.information.IsLogicalFunction
+org.jfree.formula.functions.information.IsLogical.description=org.jfree.formula.function.information.IsLogicalFunctionDescription
+org.jfree.formula.functions.information.IsText.class=org.jfree.formula.function.information.IsTextFunction
+org.jfree.formula.functions.information.IsText.description=org.jfree.formula.function.information.IsTextFunctionDescription
 
 org.jfree.formula.functions.userdefined.Null.class=org.jfree.formula.function.userdefined.NullFunction
 org.jfree.formula.functions.userdefined.Null.description=org.jfree.formula.function.userdefined.NullFunctionDescription
