--- a/jfreereport-ext/ant/build.properties
+++ b/jfreereport-ext/ant/build.properties
@@ -1,35 +1,72 @@
 #
-# Defines the JFreeReport base project directory, this is the directory, where the file 
-# jfreereport-xxx.jar and jfreereport-xxx-demo.jar are located.
+# Copyright (c) 2006, Pentaho Corporation. All Rights Reserved.
 #
-# The directory specified here is relative to the root directory of the project
-jfreereport-dir=../jfreereport
-jfreechart.version=1.0.0-rc1
 
 #
-# Optional: Define the library path, where the required jar files are located.
-# By default, the library directory is contained in the JFreeReport distribution
-# directory.
-jfreereport-libdir=${jfreereport-dir}/lib
+# JFreeReport ant build properties ...
+
+###########################################################
+#
+#  Global settings ...
+jfreereport.name=jfreereport-demo
+jfreereport.version=0.9.0
 
 #
-# Build setup
-#
-ext.libdir=lib
+# This defines the compiler settings. Optimizing would remove
+# the debug information, so we dont do that. This may be selfish,
+# but these settings guarantee better bug-reports :)
+build.debug=true
+build.optimize=false
+build.deprecation=true
 
 #
-# where to copy the created jar files
-ext.targetdir=
+# Make sure that JDK 1.2 compatible class files are generated
+build.target=1.2
+build.source=1.2
 
+#
+# All path settings are relative to the project root directory
+# (..)
+#
+libdir=lib
+
+#
+# If you specify a non-emty string, then dont forget the
+# trailing / here or your results wont fit your expectations...
+#
+targetdir=
+manifest-lib-prefix=lib/
 
 ###########################################################
 #
 #  Used libraries ...
-junit-jar-file=junit.jar
-log4j-jar-file=log4j-1.2.3.jar
-jlfgr-archive-file=jlfgr-1_0.zip
-servlet-jar-file=servlet.jar
-svgsalamander-jar-file=svgsalamander.jar
-jfreechart-jar-file=jfreechart-1.0.0-rc1.jar
+
+# Used by: core libraries
+jcommon-jar-file=jcommon-1.0.7.jar
+jcommon-serializer-jar-file=jcommon-serializer-0.1.0.jar
+libfonts-jar-file=liblayout-0.2.0.jar
+liblayout-jar-file=libfonts-0.2.2.jar
+libloader-jar-file=libloader-0.2.0.jar
+libxml-jar-file=libxml-0.2.0.jar
+libformula-jar-file=libformula-0.1.0.jar
+librepository-jar-file=librepository-0.1.0.jar
+flute-jar-file=flute-1.3-jfree-20061107.jar
+jfreereport-jar-file=jfreereport-0.9.0.jar
+
+#
+# Optional libraries
+pixie-jar-file=pixie-0.8.6.jar
+commons-logging-jar-file=commons-logging-1.0.4.jar
+oscache-jar-file=oscache-2.3-compat.jar
+hsqldb-jar-file=hsqldb.jar
+
+# Used by: module-parser
+jaxp-jar-file=gnujaxp.jar
+sac-jar-file=sac.jar
+itext-jar-file=itext-1.4.jar
 
 
+##############################################################
+#
+# Generated files ...
+jfreereport-demo-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}.jar
