--- a/jfreereport-ext/source/org/jfree/report/ext/jfreereport-ext.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/jfreereport-ext.properties
@@ -4,12 +4,10 @@
 
 #
 # Module definition
-org.jfree.report.ext.modules.barcode.base.Module=org.jfree.report.ext.modules.barcode.base.BarcodeBaseModule
-org.jfree.report.ext.modules.barcode.io.Module=org.jfree.report.ext.modules.barcode.io.BarcodeIOModule
-org.jfree.report.ext.modules.java14log.Module=org.jfree.report.ext.modules.java14log.Java14LogModule
-org.jfree.report.ext.modules.java14config.Module=org.jfree.report.ext.modules.java14config.Java14ConfigModule
-org.jfree.report.ext.modules.java14print.Module=org.jfree.report.ext.modules.java14print.Java14PrintModule
-org.jfree.report.ext.modules.java14imageio.Module=org.jfree.report.ext.modules.java14imageio.Java14ImageIOModule
-org.jfree.report.ext.modules.log4jlog.Module=org.jfree.report.ext.modules.log4jlog.Log4JLogModule
-org.jfree.report.ext.modules.jfreechart.Module=org.jfree.report.ext.modules.jfreechart.JFreeChartModule
-org.jfree.report.ext.modules.svgimage.Module=org.jfree.report.ext.modules.svgimage.SVGImageModule
+org.jfree.report.ext.modules.data.hibernate.Module=org.jfree.report.ext.modules.data.hibernate.HibernateDataFactoryModule
+org.jfree.report.ext.modules.factories.imageio.Module=org.jfree.report.ext.modules.factories.imageio.ImageIOModule
+org.jfree.report.ext.modules.factories.svg.Module=org.jfree.report.ext.modules.factories.svg.SVGImageModule
+
+org.jfree.report.ext.modules.misc.beanshell.Module=org.jfree.report.ext.modules.misc.beanshell.BeanShellModule
+org.jfree.report.ext.modules.misc.bsf.Module=org.jfree.report.ext.modules.misc.bsf.BSFModule
+org.jfree.report.ext.modules.misc.java14config.Module=org.jfree.report.ext.modules.misc.java14config.Java14ConfigModule
