--- a/libxml/source/org/jfree/xmlns/writer/sample.properties
+++ b/libxml/source/org/jfree/xmlns/writer/sample.properties
@@ -7,7 +7,7 @@
 # database
 namespace.html=schema://namespace.url/
 
-default.html=cdata
+default.html=deny
 
 #
 # For each tag, define if it accepts CDATA or if it does not.
