*** empty log message ***

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -77,6 +77,12 @@ org.jfree.formula.functions.information.IsLogical.class=org.jfree.formula.functi
 org.jfree.formula.functions.information.IsLogical.description=org.jfree.formula.function.information.IsLogicalFunctionDescription
 org.jfree.formula.functions.information.IsText.class=org.jfree.formula.function.information.IsTextFunction
 org.jfree.formula.functions.information.IsText.description=org.jfree.formula.function.information.IsTextFunctionDescription
+org.jfree.formula.functions.information.IsErr.class=org.jfree.formula.function.information.IsErrFunction
+org.jfree.formula.functions.information.IsErr.description=org.jfree.formula.function.information.IsErrFunctionDescription
+org.jfree.formula.functions.information.IsError.class=org.jfree.formula.function.information.IsErrorFunction
+org.jfree.formula.functions.information.IsError.description=org.jfree.formula.function.information.IsErrorFunctionDescription
+org.jfree.formula.functions.information.Choose.class=org.jfree.formula.function.information.ChooseFunction
+org.jfree.formula.functions.information.Choose.description=org.jfree.formula.function.information.ChooseFunctionDescription
 
 org.jfree.formula.functions.userdefined.Null.class=org.jfree.formula.function.userdefined.NullFunction
 org.jfree.formula.functions.userdefined.Null.description=org.jfree.formula.function.userdefined.NullFunctionDescription
