add of some functions

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -62,6 +62,12 @@ org.jfree.formula.functions.text.Find.class=org.jfree.formula.function.text.Find
 org.jfree.formula.functions.text.Find.description=org.jfree.formula.function.text.FindFunctionDescription
 org.jfree.formula.functions.text.Exact.class=org.jfree.formula.function.text.ExactFunction
 org.jfree.formula.functions.text.Exact.description=org.jfree.formula.function.text.ExactFunctionDescription
+org.jfree.formula.functions.text.Rept.class=org.jfree.formula.function.text.ReptFunction
+org.jfree.formula.functions.text.Rept.description=org.jfree.formula.function.text.ReptFunctionDescription
+org.jfree.formula.functions.text.Mid.class=org.jfree.formula.function.text.MidFunction
+org.jfree.formula.functions.text.Mid.description=org.jfree.formula.function.text.MidFunctionDescription
+org.jfree.formula.functions.text.Left.class=org.jfree.formula.function.text.LeftFunction
+org.jfree.formula.functions.text.Left.description=org.jfree.formula.function.text.LeftFunctionDescription
 
 ##
 # Information functions
