Adding explicit parameters ..

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -68,6 +68,8 @@ org.jfree.formula.functions.text.Mid.class=org.jfree.formula.function.text.MidFu
 org.jfree.formula.functions.text.Mid.description=org.jfree.formula.function.text.MidFunctionDescription
 org.jfree.formula.functions.text.Left.class=org.jfree.formula.function.text.LeftFunction
 org.jfree.formula.functions.text.Left.description=org.jfree.formula.function.text.LeftFunctionDescription
+org.jfree.formula.functions.text.UrlEncode.class=org.jfree.formula.function.text.URLEncodeFunction
+org.jfree.formula.functions.text.UrlEncode.description=org.jfree.formula.function.text.URLEncodeFunctionDescription
 
 ##
 # Information functions
