--- a/libxml/source/org/jfree/xmlns/writer/sample.properties
+++ b/libxml/source/org/jfree/xmlns/writer/sample.properties
@@ -10,7 +10,9 @@ namespace.html=schema://namespace.url/
 default.html=deny
 
 #
-# For each tag, define if it accepts CDATA or if it does not.
+# For each tag, define if it is allowed to indent the children or if it
+# does not allowed (deny).
+#
 # For tags not listed, we assume the default.
 tag.html.paragraph=deny
 tag.html.img=allow
