Fix: power operator not registered, Add: some functions

--- a/libformula/source/org/jfree/formula/libformula.properties
+++ b/libformula/source/org/jfree/formula/libformula.properties
@@ -68,6 +68,8 @@ org.jfree.formula.functions.text.Mid.class=org.jfree.formula.function.text.MidFu
 org.jfree.formula.functions.text.Mid.description=org.jfree.formula.function.text.MidFunctionDescription
 org.jfree.formula.functions.text.Left.class=org.jfree.formula.function.text.LeftFunction
 org.jfree.formula.functions.text.Left.description=org.jfree.formula.function.text.LeftFunctionDescription
+org.jfree.formula.functions.text.Right.class=org.jfree.formula.function.text.RightFunction
+org.jfree.formula.functions.text.Right.description=org.jfree.formula.function.text.RightFunctionDescription
 org.jfree.formula.functions.text.UrlEncode.class=org.jfree.formula.function.text.URLEncodeFunction
 org.jfree.formula.functions.text.UrlEncode.description=org.jfree.formula.function.text.URLEncodeFunctionDescription
 
@@ -122,6 +124,8 @@ org.jfree.formula.operators.infix.GreaterEqual.token=>=
 org.jfree.formula.operators.infix.GreaterEqual.class=org.jfree.formula.operators.GreaterEqualOperator
 org.jfree.formula.operators.infix.Concat.token=&
 org.jfree.formula.operators.infix.Concat.class=org.jfree.formula.operators.ConcatOperator
+org.jfree.formula.operators.infix.Power.token=^
+org.jfree.formula.operators.infix.Power.class=org.jfree.formula.operators.PowerOperator
 
 org.jfree.formula.operators.postfix.Percentage.token=%
 org.jfree.formula.operators.postfix.Percentage.class=org.jfree.formula.operators.PercentageOperator
